<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessageMe</string>
    <string name="title_conversation_detail">Conversation Detail</string>
    <string name="title_activity_compose_sms">ComposeSMSActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="compose">Compose</string>
    <string name="compose_to">To</string>
    <string name="compose_message">Message</string>
    <string name="compose_cancel">Cancel</string>
    <string name="compose_send">Send</string>
    <string name="compose_set_default">Set Default</string>
    <string name="compose_not_default">messageMe is not currently set as the default SMS app</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
